media/sonarr4k/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr4k
  namespace: media
spec:
  selector:
    app: sonarr4k
  ports:
  - name: http
    port: 80
    targetPort: http
