media/sonarr4k/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr4k
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/target: "desertbluffs.com"
spec:
  tls:
    - hosts:
        - o.desertbluffs.com
  rules:
    - host: o.desertbluffs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sonarr4k
              servicePort: sonarr4k
