media/sonarr4k/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sonarr4k
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: sonarr4k
  ingress:
  - ports:
    - port: http
    from: []
